{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 40,
  "lineage": "237d3d49-49ae-c4b6-fafd-434c1fbf585e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091d57294b303d46d",
            "arn": "arn:aws:ec2:us-east-1:118178010249:elastic-ip/eipalloc-091d57294b303d46d",
            "association_id": "eipassoc-0cbb0fcc4ee5dee72",
            "domain": "vpc",
            "id": "eipalloc-091d57294b303d46d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-028541e3d2c92ccee",
            "private_dns": "ip-10-0-1-202.ec2.internal",
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-98-87-95-149.compute-1.amazonaws.com",
            "public_ip": "98.87.95.149",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "todo-nat-eip-1"
            },
            "tags_all": {
              "Name": "todo-nat-eip-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "eipalloc-091d57294b303d46d",
            "region": "us-east-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e16a9ea47170599",
            "arn": "arn:aws:ec2:us-east-1:118178010249:elastic-ip/eipalloc-00e16a9ea47170599",
            "association_id": "eipassoc-0a95f0b2395f2932b",
            "domain": "vpc",
            "id": "eipalloc-00e16a9ea47170599",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02860cbdc65c10780",
            "private_dns": "ip-10-0-2-129.ec2.internal",
            "private_ip": "10.0.2.129",
            "public_dns": "ec2-52-87-49-241.compute-1.amazonaws.com",
            "public_ip": "52.87.49.241",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "todo-nat-eip-2"
            },
            "tags_all": {
              "Name": "todo-nat-eip-2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "eipalloc-00e16a9ea47170599",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118178010249:internet-gateway/igw-00202fc6296f21177",
            "id": "igw-00202fc6296f21177",
            "owner_id": "118178010249",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "igw-00202fc6296f21177",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091d57294b303d46d",
            "association_id": "eipassoc-0cbb0fcc4ee5dee72",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-048375e79998c6ef2",
            "network_interface_id": "eni-028541e3d2c92ccee",
            "private_ip": "10.0.1.202",
            "public_ip": "98.87.95.149",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e5724123442fcae",
            "tags": {
              "Name": "eks-nat-1"
            },
            "tags_all": {
              "Name": "eks-nat-1"
            },
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "nat-048375e79998c6ef2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e16a9ea47170599",
            "association_id": "eipassoc-0a95f0b2395f2932b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d1831505affd2f23",
            "network_interface_id": "eni-02860cbdc65c10780",
            "private_ip": "10.0.2.129",
            "public_ip": "52.87.49.241",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-008fe73ab102d2e2e",
            "tags": {
              "Name": "eks-nat-2"
            },
            "tags_all": {
              "Name": "eks-nat-2"
            },
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "nat-0d1831505affd2f23",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118178010249:route-table/rtb-001b415a1d1492538",
            "id": "rtb-001b415a1d1492538",
            "owner_id": "118178010249",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-048375e79998c6ef2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-rt-1"
            },
            "tags_all": {
              "Name": "eks-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "rtb-001b415a1d1492538",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118178010249:route-table/rtb-0a0ad021575347854",
            "id": "rtb-0a0ad021575347854",
            "owner_id": "118178010249",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1831505affd2f23",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-rt-2"
            },
            "tags_all": {
              "Name": "eks-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "rtb-0a0ad021575347854",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118178010249:route-table/rtb-0afa8a9ac998766fb",
            "id": "rtb-0afa8a9ac998766fb",
            "owner_id": "118178010249",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00202fc6296f21177",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-rt"
            },
            "tags_all": {
              "Name": "eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "rtb-0afa8a9ac998766fb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c815e1f27d69d0e",
            "region": "us-east-1",
            "route_table_id": "rtb-001b415a1d1492538",
            "subnet_id": "subnet-0c07230db5fb7db8d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "rtbassoc-06c815e1f27d69d0e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029c67c9d7f4e5ef8",
            "region": "us-east-1",
            "route_table_id": "rtb-0a0ad021575347854",
            "subnet_id": "subnet-0c804e695f12f0bf4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "rtbassoc-029c67c9d7f4e5ef8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03eeb692bb3494b6f",
            "region": "us-east-1",
            "route_table_id": "rtb-0afa8a9ac998766fb",
            "subnet_id": "subnet-06e5724123442fcae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "rtbassoc-03eeb692bb3494b6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086ccd58e26eb81c4",
            "region": "us-east-1",
            "route_table_id": "rtb-0afa8a9ac998766fb",
            "subnet_id": "subnet-008fe73ab102d2e2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "rtbassoc-086ccd58e26eb81c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118178010249:subnet/subnet-0c07230db5fb7db8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c07230db5fb7db8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118178010249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-private-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "subnet-0c07230db5fb7db8d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118178010249:subnet/subnet-0c804e695f12f0bf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c804e695f12f0bf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118178010249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-private-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "subnet-0c804e695f12f0bf4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118178010249:subnet/subnet-06e5724123442fcae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e5724123442fcae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118178010249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-public-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "subnet-06e5724123442fcae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118178010249:subnet/subnet-008fe73ab102d2e2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008fe73ab102d2e2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118178010249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-public-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-082b218c0d81b5de2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "subnet-008fe73ab102d2e2e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118178010249:vpc/vpc-082b218c0d81b5de2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06462fe7130fe5764",
            "default_route_table_id": "rtb-0aad68f43b7e77e09",
            "default_security_group_id": "sg-016bbd7fd4d2a152a",
            "dhcp_options_id": "dopt-036b45a20b41cad26",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-082b218c0d81b5de2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aad68f43b7e77e09",
            "owner_id": "118178010249",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "118178010249",
            "id": "vpc-082b218c0d81b5de2",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}